Migrate DI from Guice to Dagger 2.
Because, why not?